--- a/mercadoLiebre/package.json
+++ b/mercadoLiebre/package.json
@@ -1,9 +1,10 @@
 {
   "name": "mercadoliebre",
   "version": "1.0.0",
-  "description": "",
+  "description": "mercadoliebre",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "nodemon app.js"
   },
   "keywords": [],
